# c_experiments

./: .gitignore  CMakeLists.txt  pyproject.toml
lib/: CMakeLists.txt  strUtils.cpp  strUtils.h
src/: main.cpp
