[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13.6",
]
build-backend = "scikit_build_core.build"


[project]
name = "experiment"
version = "0.1.0"
description = "meming"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.version = ">=3.16"
build.targets = ["experiment"]
build-dir = "build"
logging.level = "INFO"

[tool.cibuildwheel]
archs = ["x86_64", "aarch64"]
build = ["cp38-*", "cp310-*"]
skip = "*-manylinux_i686 *-musllinux*" 
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"